--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 bokeh~=2.3.3
+celery~=5.1.2
 django~=3.2.5
-django-background-tasks~=1.2.5
+django-celery-beat~=2.2.1
+django-celery-results~=2.2.0
+django-debug-toolbar~=3.2.1
+django-extensions~=3.1.3
+ipython~=7.25.0
+jupyter~=1.0.0
 pandas~=1.3.0
 psycopg2~=2.9.1
 pyyaml~=5.4.1
-
-jupyter
-ipython
-django-extensions
-django-debug-toolbar
-
-
-
