--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-celery-beat~=2.2.1
 django-celery-results~=2.2.0
 django-debug-toolbar~=3.2.1
 django-extensions~=3.1.3
+flower==1.0.0
 ipython~=7.25.0
 jupyter~=1.0.0
+numpy~=1.21.0
 pandas~=1.3.0
 psycopg2~=2.9.1
 pyyaml~=5.4.1
