Static file fixes for live

--- a/os_scripts/redhat/etc/systemd/system/algobuilder.daphne.conf
+++ b/os_scripts/redhat/etc/systemd/system/algobuilder.daphne.conf
@@ -1,2 +1,2 @@
-DJANGO_SETTINGS_MODULE=algobuilder.settings
+DJANGO_SETTINGS_MODULE="algobuilder.settings"
 DAPHNE_BIN="/opt/algobuilder/venv/bin/daphne"
