--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ django-extensions~=3.1.3
 flower==1.0.0
 ipython~=7.25.0
 jupyter~=1.0.0
+kombu~=5.1.0
 numpy~=1.21.0
 pandas~=1.3.0
 psycopg2~=2.9.1
+pytz~=2021.1
 pyyaml~=5.4.1
