--- a/os_scripts/redhat/etc/systemd/system/algobuilder.celery.conf
+++ b/os_scripts/redhat/etc/systemd/system/algobuilder.celery.conf
@@ -1,6 +1,9 @@
 CELERY_BIN="/opt/algobuilder/venv/bin/celery"
 CELERY_APP="algobuilder"
 
+# Number of workers
+CELERY_NUM_WORKERS=3
+
 # - %n will be replaced with the first part of the nodename.
 # - %I will be replaced with the current child process index
 #   and is important when using the prefork pool to avoid race conditions.
@@ -9,4 +12,3 @@ CELERYD_LOG_FILE="/var/log/celery/%n%I.log"
 CELERYD_LOG_LEVEL="INFO"
 CELERYBEAT_PID_FILE="/var/run/celery/beat.pid"
 CELERYBEAT_LOG_FILE="/var/log/celery/beat.log"
-
