Script for celery worker now sepcifies queue

--- a/os_scripts/redhat/etc/systemd/system/algobuilder.celery.conf
+++ b/os_scripts/redhat/etc/systemd/system/algobuilder.celery.conf
@@ -4,6 +4,9 @@ CELERY_APP="algobuilder"
 # Number of workers
 CELERY_NUM_WORKERS=3
 
+# Queue
+CELERY_QUEUE='feature'
+
 # - %n will be replaced with the first part of the nodename.
 # - %I will be replaced with the current child process index
 #   and is important when using the prefork pool to avoid race conditions.
