--- a/os_scripts/redhat/etc/systemd/system/algobuilder.celery.service
+++ b/os_scripts/redhat/etc/systemd/system/algobuilder.celery.service
@@ -8,7 +8,7 @@ EnvironmentFile=/etc/systemd/system/algobuilder.celery.conf
 User=algobuilder
 Group=algobuilder
 WorkingDirectory=/opt/algobuilder
-ExecStart=/bin/sh -c '${CELERY_BIN} multi start ${CELERY_NUM_WORKERS} --range-prefix=wk -A $CELERY_APP --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel="${CELERYD_LOG_LEVEL}"'
+ExecStart=/bin/sh -c '${CELERY_BIN} multi start ${CELERY_NUM_WORKERS} --range-prefix=wk -A $CELERY_APP -Q ${CELERY_QUEUE} --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel="${CELERYD_LOG_LEVEL}"'
 ExecStop=/bin/sh -c '${CELERY_BIN} multi stopwait ${CELERY_NUM_WORKERS} --range-prefix=wk --pidfile=${CELERYD_PID_FILE} --loglevel="${CELERYD_LOG_LEVEL}"'
 ExecReload=/bin/sh -c '${CELERY_BIN} multi restart ${CELERY_NUM_WORKERS} --range-prefix=wk -A $CELERY_APP --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel="${CELERYD_LOG_LEVEL}"'
 Restart=always
