Added Jupyter service script

--- a/os_scripts/redhat/etc/systemd/system/algobuilder.jupyter.service
+++ b/os_scripts/redhat/etc/systemd/system/algobuilder.jupyter.service
@@ -1,6 +1,9 @@
 [Unit]
 Description=Jupyter server service for AlgoBuilder
 After=network.target
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=jupyter
 
 [Service]
 Type=simple
